<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#001433"
    tools:context=".MainActivity">

    <TextView style="@style/CodeFont"
        android:id="@+id/tvAppTitle"
        android:text="@string/Top_Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/component_horizontal_margin"
        android:paddingRight="@dimen/component_horizontal_margin"
        android:paddingTop="@dimen/component_vertical_margin"
        android:paddingBottom="@dimen/component_vertical_margin"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button style="@style/ButtonStyle.LOrange"
        android:id="@+id/btnApp_01"
        android:text="@string/App_01"
        android:layout_below="@+id/tvAppTitle"
        />

    <Button style="@style/ButtonStyle.LOrange"
        android:id="@+id/btnApp_02"
        android:text="@string/App_02"
        android:layout_below="@+id/btnApp_01"
        />

    <Button style="@style/ButtonStyle.LOrange"
        android:id="@+id/btnApp_03"
        android:text="@string/App_03"
        android:layout_below="@+id/btnApp_02"
        />

    <Button style="@style/ButtonStyle.LOrange"
        android:id="@+id/btnApp_04"
        android:text="@string/App_04"
        android:layout_below="@+id/btnApp_03"
        />

    <Button style="@style/ButtonStyle.LOrange"
        android:id="@+id/btnApp_05"
        android:text="@string/App_05"
        android:layout_below="@+id/btnApp_04"
        />

        <Button style="@style/ButtonStyle.Orange"
        android:id="@+id/btnApp_06"
        android:text="@string/App_06"
        android:layout_below="@+id/btnApp_05"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</LinearLayout>
